评测管理模块简单来说就是一个"考试系统"——它用一组预设的标准问题去考你的 AI 助手，然后打分 然后修改页面的布局